// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxesWidget inline 1`] = `
<div
  className="form-group"
>
  <div
    className="bg-transparent border-0 custom-control custom-checkbox custom-control-inline"
  >
    <input
      autoFocus={true}
      checked={true}
      className="custom-control-input"
      disabled={true}
      id="_id-a"
      name="_id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      type="checkbox"
    />
    <label
      className="custom-control-label"
      htmlFor="_id-a"
      title=""
    >
      A
    </label>
  </div>
</div>
`;

exports[`CheckboxesWidget simple 1`] = `
<div
  className="form-group"
>
  <div
    className="bg-transparent border-0 custom-control custom-checkbox"
  >
    <input
      autoFocus={true}
      checked={true}
      className="custom-control-input"
      disabled={true}
      id="_id-a"
      name="_id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      type="checkbox"
    />
    <label
      className="custom-control-label"
      htmlFor="_id-a"
      title=""
    >
      A
    </label>
  </div>
</div>
`;
